# russianaicup2015

./: .gitignore  2  CMakeLists.txt  Collider.cpp  Collider.h  Const.cpp  Const.h  Debug.cpp  Debug.h  Go.cpp  Go.h  Map.cpp  Map.h  MyStrategy.cpp  Path.cpp  Path.h  README.md  RemoteProcessClient.cpp  Runner.cpp  Scorer.cpp  Scorer.h  State.cpp  State.h  TODO  Tracks.cpp  Tracks.h  VisClient.cpp  VisClient.h  c  const.txt  g++.sh  keyboard  main.cpp  math2d.cpp  math2d.h  math3d.cpp  math3d.h  pack.sh  precalcMap.sh  runner-main.cpp
csimplesocket/: HTTPActiveSocket.cpp
lib/: local-runner-console.properties  local-runner-keyboard.properties  local-runner-replay.properties  local-runner-sync.properties  local-runner.properties  local-runner.sh  read.me
lib/plugins/: ConstDump.java  LocalServer.java  LocalTestRendererListener.java
test/: CMakeLists.txt  Math2DTest.cpp
